--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,6 @@
   <name>genetischeAlgorithmen</name>
   <url>http://maven.apache.org</url>
     <properties>
-        <jdk.home>/usr/lib/jvm/java-8-openjdk-i386</jdk.home>
-        <!--
-        <jdk.home>c:/Program Files/Java/jdk1.8.0_31</jdk.home>
-         -->
     </properties>
   <dependencies>
     <dependency>
@@ -39,15 +35,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
-
       <dependency>
-          <groupId>com.oracle</groupId>
-          <artifactId>javafx</artifactId>
-          <version>2.2.3</version>
-          <scope>system</scope>
-          <systemPath>${jdk.home}/jre/lib/ext/jfxrt.jar</systemPath>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>1.2</version>
       </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -69,6 +61,29 @@
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <finalName>genetic</finalName>
+                <archive>
+                    <manifest>
+                        <mainClass>de.thomasvolk.genexample.Main</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
