--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>commons-csv</artifactId>
       <version>1.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>3.12-beta1</version>
+      </dependency>
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
