--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,12 @@
           <artifactId>poi</artifactId>
           <version>3.12-beta1</version>
       </dependency>
-    <dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>3.12-beta1</version>
+      </dependency>
+      <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
       <version>2.4.3</version>
