--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>genetischeAlgorithmen</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/thomasvolk/algorithmTest</url>
     <properties>
     </properties>
   <dependencies>
