--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.thomasvolk.genexample</groupId>
-  <artifactId>genetischeAlgorithmen</artifactId>
+  <artifactId>geneticAlgorithm</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>genetischeAlgorithmen</name>
+  <name>geneticAlgorithm</name>
   <url>https://github.com/thomasvolk/algorithmTest</url>
 
   <dependencies>
